--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 </head>
 <body>
 <div id="board" class="board">
-	<div onclick="showClick(0)"></div>
-	<div onclick="showClick(1)"></div>
-	<div onclick="showClick(2)"></div>
-	<div onclick="showClick(3)"></div>
-	<div onclick="showClick(4)"></div>
-	<div onclick="showClick(5)"></div>
-	<div onclick="showClick(6)"></div>
-	<div onclick="showClick(7)"></div>
-	<div onclick="showClick(8)"></div>
+	<div onclick="onBoardClick(0)"></div>
+	<div onclick="onBoardClick(1)"></div>
+	<div onclick="onBoardClick(2)"></div>
+	<div onclick="onBoardClick(3)"></div>
+	<div onclick="onBoardClick(4)"></div>
+	<div onclick="onBoardClick(5)"></div>
+	<div onclick="onBoardClick(6)"></div>
+	<div onclick="onBoardClick(7)"></div>
+	<div onclick="onBoardClick(8)"></div>
 </div>
 </body>
 </html>
