Add difficulty levels

--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
 <title>tic tac toe</title>
 </head>
 <body>
+<div id="results_text">You Win!</div>
 <div id="board" class="board">
-	<div onclick="onBoardClick(0,0)"></div>
-	<div onclick="onBoardClick(0,1)"></div>
-	<div onclick="onBoardClick(0,2)"></div>
-	<div onclick="onBoardClick(1,0)"></div>
-	<div onclick="onBoardClick(1,1)"></div>
-	<div onclick="onBoardClick(1,2)"></div>
-	<div onclick="onBoardClick(2,0)"></div>
-	<div onclick="onBoardClick(2,1)"></div>
-	<div onclick="onBoardClick(2,2)"></div>
+	<div onclick="onBoardClick(0,0,true)"></div>
+	<div onclick="onBoardClick(0,1,true)"></div>
+	<div onclick="onBoardClick(0,2,true)"></div>
+	<div onclick="onBoardClick(1,0,true)"></div>
+	<div onclick="onBoardClick(1,1,true)"></div>
+	<div onclick="onBoardClick(1,2,true)"></div>
+	<div onclick="onBoardClick(2,0,true)"></div>
+	<div onclick="onBoardClick(2,1,true)"></div>
+	<div onclick="onBoardClick(2,2,true)"></div>
 </div>
 </body>
 </html>
