--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <head>
 <link href="main.css" rel="stylesheet"></link>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.5.4/socket.io.js" integrity="sha512-YeeA/Qxn5hYdkukScTCNNOhTrv1C2RubAGButJ1rmgQwZf/HdRaCGl+JAVkqsqaNRaYNHdheiuKKuPf9mDcqKg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<!--later to be loaded from server-->
+<script src="./constants.js"></script>
 <script defer src="client_ui.js"></script>
 <title>tic tac toe</title>
 </head>
