--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html>
 <head>
 <title>tic tac toe</title>
-<link rel="stylesheet" href="welcome.css"></link>
-<link rel="icon" href="./favicon.ico" type="image/icon type">
+<link rel="stylesheet" type="text/css" href="./welcome.css"></link>
+<link rel="icon" type="image/icon type" href="./favicon.ico"></link>
 </head>
 <body>
 <div id="container">
