--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <div id="container">
 	<div id="title_text">Tic Tac Toe</div>
-	<div id="mode_selection_text">Play Game</div>
+	<div id="mode_selection_text">Play Now</div>
 	<ul>
 		<li><a href="./game.html?mode=1p">One Player</a></li>
 		<li><a href="./game.html?mode=2p">Two Player</a></li>
