--- a/game.html
+++ b/game.html
@@ -12,15 +12,15 @@
 <body>
 <div id="results_text">You Win!</div>
 <div id="board" class="board">
-	<div onclick="onBoardClick(0,0)"></div>
-	<div onclick="onBoardClick(0,1)"></div>
-	<div onclick="onBoardClick(0,2)"></div>
-	<div onclick="onBoardClick(1,0)"></div>
-	<div onclick="onBoardClick(1,1)"></div>
-	<div onclick="onBoardClick(1,2)"></div>
-	<div onclick="onBoardClick(2,0)"></div>
-	<div onclick="onBoardClick(2,1)"></div>
-	<div onclick="onBoardClick(2,2)"></div>
+	<div class="tile" onclick="onBoardClick(0,0)"></div>
+	<div class="tile" onclick="onBoardClick(0,1)"></div>
+	<div class="tile" onclick="onBoardClick(0,2)"></div>
+	<div class="tile" onclick="onBoardClick(1,0)"></div>
+	<div class="tile" onclick="onBoardClick(1,1)"></div>
+	<div class="tile" onclick="onBoardClick(1,2)"></div>
+	<div class="tile" onclick="onBoardClick(2,0)"></div>
+	<div class="tile" onclick="onBoardClick(2,1)"></div>
+	<div class="tile" onclick="onBoardClick(2,2)"></div>
 </div>
 </body>
 </html>
