--- a/game.html
+++ b/game.html
@@ -22,5 +22,8 @@
 	<div class="tile" onclick="onBoardClick(2,1)"></div>
 	<div class="tile" onclick="onBoardClick(2,2)"></div>
 </div>
+<div id="val_banner_text">
+	<span>&#128158; &#128157; Dagi & Flo &#128158; &#128536;</span>
+</div>
 </body>
 </html>
