--- a/game.html
+++ b/game.html
@@ -23,7 +23,7 @@
 	<div class="tile" onclick="onBoardClick(2,2)"></div>
 </div>
 <div id="val_banner_text">
-	<span>&#128158; &#128157; Dagi & Flo &#128158; &#128536;</span>
+	<span>&#128158; &#127801; &#128157; Dagi & Flo &#128158; &#128536; &#127801;</span>
 </div>
 </body>
 </html>
