--- a/game.html
+++ b/game.html
@@ -4,10 +4,13 @@
 <head>
 	<link rel="stylesheet" href="main.css">
 	</link>
-	<link rel="icon" href="./favicon.ico" type="image/icon type">
+	<!-- <link rel="icon" href="./favicon.ico" type="image/icon type">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.5.4/socket.io.js"
 		integrity="sha512-YeeA/Qxn5hYdkukScTCNNOhTrv1C2RubAGButJ1rmgQwZf/HdRaCGl+JAVkqsqaNRaYNHdheiuKKuPf9mDcqKg=="
-		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+		crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
+	<script src="https://cdn.socket.io/3.1.3/socket.io.min.js"
+		integrity="sha384-cPwlPLvBTa3sKAgddT6krw0cJat7egBga3DJepJyrLl4Q9/5WLra3rrnMcyTyOnh"
+		crossorigin="anonymous"></script>
 	<!--later to be loaded from server-->
 	<!-- <script src="./constant.js"></script> -->
 	<script type="module" defer>
