--- a/index.html
+++ b/index.html
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>tic tac toe</title>
-<link rel="stylesheet" type="text/css" href="./welcome.css"></link>
-<link rel="icon" type="image/icon type" href="./favicon.ico"></link>
-<!-- dev -->
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.5.4/socket.io.js" integrity="sha512-YeeA/Qxn5hYdkukScTCNNOhTrv1C2RubAGButJ1rmgQwZf/HdRaCGl+JAVkqsqaNRaYNHdheiuKKuPf9mDcqKg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
-<!-- prod -->
-<script src="https://cdn.socket.io/3.1.3/socket.io.min.js" integrity="sha384-cPwlPLvBTa3sKAgddT6krw0cJat7egBga3DJepJyrLl4Q9/5WLra3rrnMcyTyOnh" crossorigin="anonymous"></script>
-<script src="./constants.js"></script>
-<script defer src="./welcome.js"></script>
+	<title>tic tac toe</title>
+	<link rel="stylesheet" type="text/css" href="./welcome.css">
+	</link>
+	<link rel="icon" type="image/icon type" href="./favicon.ico">
+	</link>
+	<!-- dev -->
+	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.5.4/socket.io.js" integrity="sha512-YeeA/Qxn5hYdkukScTCNNOhTrv1C2RubAGButJ1rmgQwZf/HdRaCGl+JAVkqsqaNRaYNHdheiuKKuPf9mDcqKg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
+	<!-- prod -->
+	<script src="https://cdn.socket.io/3.1.3/socket.io.min.js"
+		integrity="sha384-cPwlPLvBTa3sKAgddT6krw0cJat7egBga3DJepJyrLl4Q9/5WLra3rrnMcyTyOnh"
+		crossorigin="anonymous"></script>
+	<script type="module">
+		import { onClickNewGame } from "./welcome.js";
+
+		document.querySelector("#p1-option").addEventListener("click", () => { onClickNewGame(event, '1p') });
+		document.querySelector("#p2-option").addEventListener("click", () => { onClickNewGame(event, '2p') });
+	</script>
+	<!-- <script defer src="./welcome.js"></script> -->
 </head>
+
 <body>
-<div id="container">
-	<div id="title_text">Tic Tac Toe</div>
-	<div id="mode_selection_text">Play Now</div>
-	<ul>
-		<li><a href="./" onClick="onClickNewGame(event, '1p')">One Player</a></li>
-		<li><a href="./" onClick="onClickNewGame(event, '2p')">Two Player</a></li>
-	</ul>
-</div>
+	<div id="container">
+		<div id="title_text">Tic Tac Toe</div>
+		<div id="mode_selection_text">Play Now</div>
+		<ul>
+			<li><a id="p1-option" href="./">One Player</a></li>
+			<li><a id="p2-option" href="./">Two Player</a></li>
+		</ul>
+	</div>
 </body>
+
 </html>
