further minifying of scripts, externalized constants

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 		<div id="title_text">Tic Tac Toe</div>
 		<div id="mode_selection_text">Play Now</div>
 		<ul>
-			<li><a id="p1-option" href="./">One Player</a></li>
-			<li><a id="p2-option" href="./">Two Player</a></li>
+			<li><a id="p1-option">One Player</a></li>
+			<li><a id="p2-option">Two Player</a></li>
 		</ul>
 	</div>
 </body>
