--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<script src="https://cdn.socket.io/3.1.3/socket.io.min.js"
 		integrity="sha384-cPwlPLvBTa3sKAgddT6krw0cJat7egBga3DJepJyrLl4Q9/5WLra3rrnMcyTyOnh"
 		crossorigin="anonymous"></script>
-	<script type="module">
+	<script type="module" defer>
 		import { onClickNewGame } from "./welcome.js";
 
 		document.querySelector("#p1-option").addEventListener("click", () => { onClickNewGame(event, '1p') });
